compiler/testData/cli/jvm/apiVersionLessThanLanguageUsingArgfile.out
warning: API version 1.2 is deprecated and its support will be removed in a future version of Kotlin
compiler/testData/cli/jvm/apiVersion.kt:2:15: error: unresolved reference: sealedSubclasses
    ""::class.sealedSubclasses
              ^
COMPILATION_ERROR
